Sat Oct 11 14:00:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* ace/ace_wchar.inl: Fix for BUG 1605. Thanks to Dmitry
	  Botcharnikov <dimab@garant.ru> and Stephan Bettermann
	  <sbetterm@erggroup.com> for reporting the problem and suggesting
	  a solution.  Please see 

	  http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1605 

	  for a description of the problem.

Sat Oct 11 11:01:05 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Koku_defs.h:
	  Added export qualification for some classes to get rid of link
	  errors in MSVC builds.

Fri Oct 10 22:56:35 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

	* Kokyu/Kokyu_defs.{h,i,cpp}: 
	* Kokyu/Dispatcher_Task.{i,h,cpp}: 
	* Kokyu/Dispatcher_Impl.h: 
	* Kokyu/Default_Dispatcher_Impl.cpp: 
	
	  Added allocator, sched scope, sched policy, reordering queue
	  attributes to the Dispatcher_Attributes class. This will make
	  the dispatcher more configurable.
	
	* Kokyu/tests/FIFO/test.cpp: 
	* Kokyu/tests/EDF/test.cpp: 
	 
	  Added command line options to specify the sched policy.
	
Fri Oct 10 19:52:26 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/OS.{h,i}:
          On some platforms clearerr is a macro. Because of this,
          the name ACE_OS::clearerr will cause errors. So in order
          to use the macro as it is defined but also keep the name
          ACE_OS::clearerr, clearerr macro is used in inline function,
          and then undefined.  This patch fixes the "fixes" committed by
          Wed Sep 24 08:57:36 2003  Balachandran Natarajan
          <bala@dre.vanderbilt.edu> and Tue Apr 15 16:06:24 2003  Douglas
          C. Schmidt  <schmidt@ace.cs.wustl.edu>.  Thanks to Olli Savia
          <ops@iki.fi> for submitting the patch and Bala for motivation me
          to apply it...

Fri Oct 10 10:05:14 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor: