@@ -1,5 +1,13 @@
-Sat Oct 11 14:00:29 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+Sat Oct 11 17:39:09 2003  Venkita Subramonian  <venkita@cs.wustl.edu>
 
+	* Kokyu/Dispatcher_Task.i: 
+	* Kokyu/Dispatcher_Task.h: 
+	* Kokyu/DSRT_Direct_Dispatcher_Impl_T.cpp: 
+	* Kokyu/DSRT_CV_Dispatcher_Impl_T.cpp: 
+
+	  Add this-> qualification when referencing instance variables in
+	  base class to get rid of compiler warnings in HPUX build.
+	
 	* ace/ace_wchar.inl: Fix for BUG 1605. Thanks to Dmitry
 	  Botcharnikov <dimab@garant.ru> and Stephan Bettermann
 	  <sbetterm@erggroup.com> for reporting the problem and suggesting
